2009-09-30  Nick Clifton  <nickc@redhat.com>

	* config.gcc (sh-symbianelf): Replace definition of extra_objs
	with separate definitions of c_target_objs and cxx_target_objs.
	* config/sh/t-sh: Add rules to build symbian-cxx.o, symbian-c.o
	and symbian-base.o.
	* config/sh/sh.c (TARGET_CXX_INPUT_EXPORT_CLASS): Use
	sh_symbian_import_export_class.
	* config/sh/sh-protos.h: Fix names of exported symbian functions.
	* config/sh/symbian.c: Delete, moving code into...
	* config/sh/symbian-base.c: ... here
	* config/sh/symbian-c.c: ... and here
	* config/sh/symbian-cxx.c: ... and here.

2009-09-30  Uros Bizjak  <ubizjak@gmail.com>

	PR target/22093
	* config/alpha/alpha.md (unaligned_storehi_be): Force operand
	of plus RTX into register.

2009-09-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/install.texi: Linguistic and markup fixes.
	(Configuration) <--disable-cpp>: Remove description.
	<--enable-maintainer-mode>: Autotools files are affected, too.
	<--with-sysroot>: Improve description.
	(Building): Bump required GNU make version.

2009-09-29  Harsha Jagasia  <harsha.jagasia@amd.com>

	* config.gcc (i[34567]86-*-*): Include fma4intrin.h.
	(x86_64-*-*): Ditto.
	
	* config/i386/fma4intrin.h: New file, provide common x86 compiler
	intrinisics for FMA4.
	* config/i386/cpuid.h (bit_FMA4): Define FMA4 bit.
	* config/i386/x86intrin.h: Fix typo to SSE4A instead of SSE4a.
	Add FMA4 check and fma4intrin.h.
	* config/i386/i386-c.c(ix86_target_macros_internal): Check
	ISA_FLAG for FMA4. 
	* config/i386/i386.h(TARGET_FMA4): New macro for FMA4.
	* config/i386/i386.md (UNSPEC_FMA4_INTRINSIC): Add new UNSPEC
	constant for FMA4 support.
	(UNSPEC_FMA4_FMADDSUB): Ditto.
	(UNSPEC_FMA4_FMSUBADD): Ditto.
	* config/i386/i386.opt (-mfma4): New switch for FMA4 support.
	* config/i386/i386-protos.h (ix86_fma4_valid_op_p): Add
	declaration.
	(ix86_expand_fma4_multiple_memory): Ditto.
	* config/i386/i386.c (OPTION_MASK_ISA_FMA4_SET): New.
	(OPTION_MASK_ISA_FMA4_UNSET): New.	